examples/components/error/error-message-accordion.njk
{% from "components/accordion/accordion.njk" import accordion as accordion %}
{{ accordion(accordion_error_example) }}
